SG-2004-08-03-0: Bugfix:    fixed a bug in the xml-otuput
                 Issue:     1191
                 Bugtraq:   5081821
                 Changed:   qstat
                 Review:    EB

DT-2004-08-01-0: Bugfix:    o Fixed JavaDoc errors
                            o Fixed qstat man page error
                            o Updated aimk to build new JavaDocs
                            o Updated distinst to install drmaa.jar in lib
                            o Added a link to the JavaDocs from the DRMAA Java
                              language binding howto
                 Changed:   doc, aimk, distinst, www

DT-2004-07-30-0: Bugfix:    o Fixed seg fault in qconf -mattr
                            o Fixed CULL cross-linking in qconf -mattr queue
                              complex_values
                            o Fixed hostname aliasing issue in qconf -mattr
                            o qhost now prints NCPU as an int
                            o Changed qsub -r to accept 'yes' and 'no'
                            o Cleaned up JAPI
                 Issue:     1055, 1081, 1092, 1172
                 Bugtraq:   5080836, 5080839, 5080833, 5080840
                 Changed:   qconf, qhost, qsub, JAPI, doc
                 Review:    SG

SG-2004-07-30-1: Bugfix:    qconf -de did not check if the host ist still in use.
                 Issue:     1183, 1168
                 Bugtraq:   5080779, 5080784
                 Changed:   qstat, qmaster
                 Review:    DT

HP-2004-07-30-0: Doc:       Description of exit_status values of shepherd
                 Issue:     97
                 Changed:   man8/sge_shepherd.8

SG-2004-07-30-0: Enhancem.: added a feature to filter the jobs in the
                            scheduler based on their category.
                 Changed:   schedler, schedd.conf(5)
                 Review:    AD

AD-2004-07-30-0: Cleanup:   The implementation of 'sge_add_auto_user()' made