@@ -46,7 +46,7 @@ bool hgroup_show(lList **answer_list, const char *name);
 bool hgroup_show_structure(lList **answer_list, const char *name,
                            bool show_tree);
 
-bool hgroup_add(lList **answer_list, const char *name);
+bool hgroup_add(lList **answer_list, const char *name, bool is_name_validate);
 
 bool hgroup_modify(lList **answer_list, const char *name);
 
